--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
-  <title>Admin Articulos</title>
+  <title>Catalogo de conceptos.</title>
 </head>
 
 <body>
   <div class="row container-fluid ml-1">
     <div class="col-sm-4">
-      <h3>Add articulo:</h3>
+      <h5 class="mb-1 mt-2">Catalogo de conceptos.</h5>
+      <label>Adicionar o editar.</label>
       <form [formGroup]="adminForm" autocomplete="on">
         <div class="form-group">
           <input type="hidden" formControlName="id" class="form-control"
