--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="">PWA GMayaS</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="">Admin Movil</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
     aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,11 +9,26 @@
       <li class="nav-item active">
         <a class="nav-link" href="">Home</a>
       </li>
+      <!--
       <li *ngIf="(auth.isAuthenticated() | async)" class="nav-item active">
         <a class="nav-link" href="admin">Admin</a>
       </li>
+       -->
       <li *ngIf="!(auth.isAuthenticated() | async)" class="nav-item active">
         <a class="nav-link" href="register">Register</a>
+      </li>
+      <li *ngIf="(auth.isAuthenticated() | async)" class="dropdown show">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+          aria-expanded="false">ERP</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="admin">Administración</a>
+          <a class="dropdown-item" href="conta">Contabilidad</a>
+          <a class="dropdown-item" href="rh">Recursos humanos</a>
+          <div class="dropdown-divider"></div>
+          <div class="dropdown-header">Catalogos</div>
+          <a class="dropdown-item" href="conceptos">Conceptos</a>
+          <a class="dropdown-item" href="users">Usuarios</a>
+        </div>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
