--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
       </li>
       <li *ngIf="(auth.isAuthenticated() | async)" class="dropdown show">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-          aria-expanded="false">Administración</a>
+          aria-expanded="false"><i class="fa fa-line-chart mr-2" aria-hidden="true"></i>Administración</a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="admin">Action</a>
           <a class="dropdown-item" href="admin">Another action</a>
@@ -31,7 +31,7 @@
       </li>
       <li *ngIf="(auth.isAuthenticated() | async)" class="dropdown show">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-          aria-expanded="false">Contabilidad</a>
+          aria-expanded="false"><i class="fa fa-usd mr-2" aria-hidden="true"></i>Contabilidad</a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="conta">Action</a>
           <a class="dropdown-item" href="conta">Another action</a>
@@ -42,7 +42,7 @@
       </li>
       <li *ngIf="(auth.isAuthenticated() | async)" class="dropdown show">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-          aria-expanded="false">Recursos humanos</a>
+          aria-expanded="false"><i class="fa fa-universal-access mr-2" aria-hidden="true"></i>Recursos humanos</a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="rh">Action</a>
           <a class="dropdown-item" href="rh">Another action</a>
@@ -53,14 +53,14 @@
       </li>
       <li *ngIf="(auth.isAuthenticated() | async)" class="dropdown show">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-          aria-expanded="false">Catalogos</a>
+          aria-expanded="false"><i class="fa fa-database mr-2" aria-hidden="true"></i>Catalogos</a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="admin">Action</a>
           <a class="dropdown-item" href="conta">Another action</a>
           <a class="dropdown-item" href="rh">Something else here</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="conceptos">Conceptos</a>
-          <a class="dropdown-item" href="users">Usuarios</a>
+          <a class="dropdown-item" href="conceptos"><i class="fa fa-barcode mr-2" aria-hidden="true"></i>Conceptos</a>
+          <a class="dropdown-item" href="users"><i class="fa fa-users mr-2" aria-hidden="true"></i>Usuarios</a>
         </div>
       </li>
       <li class="nav-item active">
