--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -61,6 +61,7 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="conceptos"><i class="fa fa-barcode mr-2" aria-hidden="true"></i>Conceptos</a>
           <a class="dropdown-item" href="users"><i class="fa fa-users mr-2" aria-hidden="true"></i>Usuarios</a>
+          <a class="dropdown-item" href="map"><i class="fa fa-map-marker mr-2" aria-hidden="true"></i>Map</a>
         </div>
       </li>
       <li class="nav-item active">
